fix: bug on mobile

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -5,6 +5,8 @@
   font-family: 'Poppins', sans-serif;
 }
 
+*::-ms-value {background: none; color: #42413D;}
+
 main {
   height: 100vh;
   background: linear-gradient(to right top, #091f1b, #3a5a5f);
@@ -16,7 +18,6 @@ main {
 .game-screen {
   height: 80vh;
   width: 80vw;
-  background: linear-gradient(to right top, rgba(0, 0, 0, 0.8), rgba(139, 139, 139, 0.4));
   filter: blur(30);
   display: flex;
   justify-content: center;
@@ -83,6 +84,10 @@ main {
   cursor: pointer;
 }
 
+.g-button:focus-visible {
+  outline: none;
+}
+
 #green {
   background: linear-gradient(to right top, rgb(3, 128, 3), rgb(122, 247, 122));
   border-top-left-radius: 100%;
@@ -113,9 +118,7 @@ main {
   border-radius: 50%;
   margin: 5%;
 }
-#center div {
-  text-align: center;
-  padding-top: 40%;
+h3 {
   color: white;
 }
 
@@ -148,7 +151,7 @@ button {
   border: 1px solid transparent;
   text-transform: uppercase;
   letter-spacing: 1px;
-  font-size: 48px;
+  font-size: 22px;
 }
 
 button:hover {
